# goflow

./: .gitignore  README.md  environment.yml  flow_train.py  goflow_paper_molecules_analysis.ipynb  preprocess_create_splits.sh  preprocess_extract_rxn_core.sh  preprocessing.py  preprocessing.sh  pyproject.toml  readme.md  split_preprocessed.py  test_ablate_samples.sh  test_ablate_steps.sh  train_test_all_model_sizes.sh  train_test_all_splits.sh  train_test_error_bar.sh
configs/: train.yaml
configs/callbacks/: default.yaml
configs/data/: rdb7.yaml
configs/experiment/: flow1.yaml  flow2.yaml  flow3.yaml  flow4.yaml  flow5.yaml
configs/model/: flow.yaml  gotennet.yaml
data/RDB7/processed_data/: feat_dict.pkl
data/RDB7/raw_data/: plot_rxn_types.ipynb  (+2 more)
data_processing/: classify_by_reaction_core.py  find_reaction_types.py
data_processing/utils/: drawing_utils.py  reaction_utils.py
flow_matching/: flow_module.py  utils.py
gotennet/utils/: __init__.py  cgr_graph_utils.py  instantiators.py  logging_utils.py  rich_utils.py  utils.py
logs/test_ablate_samples/: stats.csv
logs/test_ablate_steps/: stats.csv
logs/train_test_all_model_sizes/: stats.csv
logs/train_test_all_splits/: stats.csv
logs/train_test_error_bar/: compute_error_stats.ipynb  stats.csv
tsdiff/: .gitignore  clustering.py  evaluation.py  preprocessing.py  sampling.py  test_all_splits.sh  train.py  train_all_splits.sh
tsdiff/configs/: train_config_v2.yml
tsdiff/models/: common.py  geometry.py  sampler.py
tsdiff/utils/: datasets.py  parse_xyz.py
utils/: datasets.py
(+130 files in other folders)
