[project]
name = "goflow"
version = "0.1.0"
description = "goflow package"
readme = "README.md"
requires-python = "==3.12.6"
dependencies = [
    "ase>=3.25.0",
    "einops>=0.8.1",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "lightning>=2.5.1.post0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "rdkit>=2024.9.6",
    "rich>=14.0.0",
    "rootutils>=1.0.7",
    "setuptools>=80.3.1",
    "torch==2.6.0",
    "torchaudio>=2.6.0",
    "torchdiffeq>=0.2.5",
    "torchvision>=0.21.0",
    "wandb>=0.19.10",
]